JumpScript/tests/baselines/reference/project/jsFileCompilationSameNameFilesSpecifiedWithAllowJs/node/jsFileCompilationSameNameFilesSpecifiedWithAllowJs.errors.txt
SameNameTsSpecifiedWithAllowJs/jmpconfig.json(2,24): error TS5053: Option 'allowJs' cannot be specified with option 'declaration'.


==== SameNameTsSpecifiedWithAllowJs/jmpconfig.json (1 errors) ====
    {
      "compilerOptions": { "allowJs": true },
                           ~~~~~~~~~
!!! error TS5053: Option 'allowJs' cannot be specified with option 'declaration'.
      "files": [ "a.jump" ]
    }
==== SameNameTsSpecifiedWithAllowJs/a.jump (0 errors) ====
    var test = 10;